# screenshotWindowsWindow

./: .gitignore  CMakeLists copy.txt  CMakeLists.txt  Duplicate window Bitblt or printwindow.cpp  DuplicateWindow.cpp  DxWork.cpp  README.md  dx.cpp  dxzlb.cpp  main copy 2.cpp  main copy.cpp
OldTest/: _main copy 2.cpp  _main copy.cpp  main copy 2.cpp  main copy 3.cpp  main copy 4.cpp  main copy 5.cpp  main copy 6.cpp  main copy.cpp
openGl/: CMakeLists.txt  README.md  main.cpp
